--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									therapeutic, educational, skill-building, storytelling, and experiences that bring the users’ joy.   
 								</p>
 								<p>
-									A quick beakdown of my skills and the technologies I have experience working with can be found here: <a style="font-weight:bold" href="#skills">Skills</a>.
+									A quick breakdown of my skills and the technologies I have experience working with can be found here: <a style="font-weight:bold" href="#skills">Skills</a>.
 								</p>
 								<h3>more about me</h3>
 								<p> 
