--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 								<div id="life"><h2>Married Life</h2>
 									<span class="image main"><img src="images/lantern.jpg" alt="" /></span>
 									<p>
-										I met my wife on the inter-webs, and we went to sushi for our first date. (^-^) We have been married for about 3 years and we live with our two dogs, 
+										I met my wife, Apurva, on the inter-webs, and we went out for sushi on our first date. (^-^) We have been married for about 3 years and we live with our two dogs, 
 										Tofu and Bean. Tofu is scared of everything including his own shadow, and Bean loves everything but also tries to fight everything. 
 										Bean's a little ball of energy, and Tofu is content as long as nothing is near him.
 									</p>
