--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 								</p>
 								<p>
 									Our product scope for this project was to have an intractable heart that had a label system, could be scaled up, made transparent, 
-									and have controllable animation and audio. Through further testing and prototyping, we found also needed a way to rotate the heart. 
+									and have controllable animation and audio. Through further testing and prototyping, we also found we needed a way to rotate the heart. 
 									We also needed an environment and lighting, and this was our initial scope. Contracts with the client were then finalized, and our team 
 									had a little less than 3 months left to complete the project.
 								</p>
