added more in about me

--- a/index.html
+++ b/index.html
@@ -90,10 +90,17 @@
 								<div id="japan"><h2>Japan</h2>
 									<span class="image main"><img src="images/temple.jpg" alt="" /></span>
 									<p>
-										My time in Japan may not be directly connected to my interest in XR, but experiencing another vastly different culture from my own 
-										humbled me and opened my eyes to locational realities within our world. It taught me to appreciate and explore a life that is distinct 
-										and unique, showing me that until that point, I had only known one reality, my own. Through my time in Japan, I was privileged to learn 
-										enough of the language, enabling me to form deep relationships and explore the culture through food, music, and art.
+										When I was young, my family had hosted Japanese exchange students, and many great relationships were formed because of these exchanges. 
+										As my host sister was about to leave back to Japan, she made me promise to learn Japanese and come to Japan and speak to her in her own 
+										language. As I grew older, I had taken a few Japanese courses and eventually enrolled in the Kudan Institute of Japanese Language. After 
+										about 4 months of my intensive language immersion program, I contacted my host sister, and we met. I had come to Japan and spoke to my host 
+										sister in her own language, fulfilling my promise to her. We are all still very close to this day. 
+									</p>
+									<p>										
+										My time in Japan may not be directly connected to my interest in XR, but experiencing another vastly different culture from my own humbled me 
+										and opened my eyes to the realities of differing cultures. It taught me to appreciate and explore a life that is distinct and unique, showing me 
+										that until that point, I had only known one reality, my own. Through my time in Japan, I was privileged to learn enough of the language to form deep 
+										relationships and explore the culture through food, music, and art.
 									</p>
 								</div>
 								<br>
@@ -106,7 +113,8 @@
 										systems. I gained a deep understanding	of troubleshooting and completing tasks in high-pressure situations with little to no room for 
 										error. As I rose in rank, I achieved leadership positions, training my superiors and younger airmen, which solidified me as a highly 
 										valued specialist in my field. In doing so, I gained teamwork and leadership experience along with an understanding of how to manage 
-										teams during stressful situations.
+										teams during stressful situations. As a result of my actions within the military, I was awarded the Air Force Achievement Medal and 
+										Good Conduct Medal. 
 									</p>
 								</div>
 								<br>
