--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
 								<h2 class="major">About Me</h2>
 								<span class="image left"><img src="images/profilePic.PNG" alt="" /></span>
 								<p> 
-									My name is David Wikstrom, and I’m an aspiring Virtual Reality developer based out of Seattle, Washington. 
-									Virtual Reality has been something that has fascinated me since I was very young, and due to somewhat recent 
-									developments in my life I now have the opportunity, skills, and determination to build the virtual worlds and 
-									experiences that have always fascinated me.
+									My name is David Wikstrom, and I’m an Extended Reality developer based out of Seattle, Washington. 
+									Virtual Reality has been something that has fascinated me since I was very young, and over the recent years 
+									I've had the opportunity to hone my skills and am determined to put my skillset to work in a meaningful 
+									and impactful way.
 								</p>
 								<p> 
-									I have recently graduated from Bellevue College in Washington State with a Bachelor’s Degree in Application Development. I will use the coding 
-									skills and foundations that I have gained throughout my time going back to school to further sharpen and increase my skill set to pursue my 
-									goals. I wish to use the skills that I have gained to build XR applications in order to help people. Through the development of medical, 
-									therapeutic, educational, skill-building, storytelling, and experiences that bring the users’ joy.   
+									Upon graduating from Bellevue College in Washington State with a Bachelor’s Degree in Application Development. I was picked up by my current
+									company MXTreality, and began my career as an XR Developer. Within the first year at MXT our lead developer left and I became the lead developer for the company.
+									Over the next few years I've been heading multiple projects for multiple clients. My team and I have developed everything form VR driving sims, space sims, 
+									educational apps, medical apps, research prototypes, trainging applications, and even a game release on steam. 
 								</p>
 								<p>
 									A quick breakdown of my skills and the technologies I have experience working with can be found here: <a style="font-weight:bold" href="#skills">Skills</a>.
@@ -153,9 +153,10 @@
 								<div id="life"><h2>Married Life</h2>
 									<span class="image main"><img src="images/lantern.jpg" alt="" /></span>
 									<p>
-										I met my wife, Apurva, on the inter-webs, and we went out for sushi on our first date. (^-^) We have been married for about 3 years and we live with our two dogs, 
-										Tofu and Bean. Tofu is scared of everything including his own shadow, and Bean loves everything but also tries to fight everything. 
-										Bean's a little ball of energy, and Tofu is content as long as nothing is near him.
+										I met my wife, Apurva, on the inter-webs, and we went out for sushi on our first date. (^-^) We have been married for about 5 years 
+										and we had a son, Remy, who is now 2 1/2 years old. We also live with our two dogs, Tofu and Bean. Tofu is scared of everything including 
+										his own shadow, and Bean loves everything but also tries to fight everything. Bean's a little ball of energy, and Tofu is content 
+										as long as nothing is near him.
 									</p>
 									<span class="image main"><img src="images/BeanAndTofu.gif" alt="" /></span>
 								</div>
@@ -163,10 +164,11 @@
 										<ul id="sklz">
 											<li>Virtual Reality Development</li>
 											<li>C#</li>
+											<li>C++</li>
 											<li>JavaScript</li>
 											<li>Python</li>
 											<li>Unity</li>
-											<li>Unreal Engine 4</li>
+											<li>Unreal Engine 5</li>
 											<li>Game Design</li>
 											<li>Android Studio</li>
 											<li>AWS</li>
@@ -174,7 +176,6 @@
 											<li>Linux</li>
 											<li>AngularJS</li>
 											<li>React.js</li>
-											<li>Kotlin</li>
 											<li>Firebase</li>
 											<li>MongoDB</li>
 											<li>SQL</li>
@@ -196,7 +197,60 @@
 
 						<!-- Projects -->
 							<article id="projects">
-								<h1 class="major">Projects</h1>
+								<h1 class="major">Professional Projects</h1>
+								<br>
+								<div>
+									<h3>MarsVR: Mars Desert Research Station VR</h3>								
+										<p>
+											The goal of the MDRS VR project is to create a training environment for MDRS crewmembers, and for the general public 
+											to learn more about Mars analog science, technology and procedures. The MarsVR team at the Mars Society has been working 
+											since 2018 on a digital twin of the real-life Mars Desert Research Station in southern Utah.  Using the latest virtual reality 
+											technologies and techniques, we are working to create a full-fidelity simulation of the MDRS campus including the facilities' 
+											exterior & interior spaces, and key training scenarios that crewmembers must learn to conduct a Mars analog simulation in 
+											real life.
+										</p>
+										<div class="video-container"><iframe src="https://www.youtube.com/watch?v=WcvOQmZymHw"></iframe></div>
+										<br>
+								</div>
+								<br><br>
+								<div>
+									<h3>Drivers of Tomorrow Driving Simulator</h3>								
+										<p>
+											We're transforming driver training with cutting-edge VR and AR solutions. Our mission? To help transit authorities 
+											and companies train safer, smarter drivers. With immersive simulations and real-time feedback, we’re shaping the 
+											future of driving. Watch to see how we’re setting the new standard in driver training.
+										</p>
+										<div class="video-container"><iframe src="https://youtube.com/shorts/4WWtuNQH76A?si=L3W-hFGu1WeA4RTS"></iframe></div>
+										<br>
+								</div>
+								<br><br>
+								<div>
+									<h3>Adventure Climb VR</h3>								
+										<p>
+											We've revamped our physics and movement system, to allow players to statically position themselves on rocks, throw 
+											themselves, catch objects, and more. A room-scale climbing experience for anyone of any age. Achieve triumph by 
+											getting to the top in as quick a time as possible. Designed by actual rock climbers, designed to thrill, and offers 
+											the views that typically are only offered to the very few brave enough to climb to ridiculous heights. Race to the top, 
+											beat your friend's time, explore the various Easter Eggs, avoid the hazards, and find SECRET Locations... 
+											the choice of how you play is up to you!
+										</p>
+										<div class="video-container"><iframe src="https://www.youtube.com/watch?v=3XLtSJJKAC0"></iframe></div>
+										<br>
+								</div>
+								<br><br>
+								<div>
+									<h3>Swedish Physical Rehab VR Music Room</h3>								
+										<p>
+											One of the instruments created for the Swedish Physical Rehabilitation VR Music Room, as part of a suite of experiences 
+											to promote physical and mental health. Other instruments in this multiplayer experience include shark beats, bass reads, 
+											donkable angler fish, and starfish drumkits. We also have a version of this that works with head gaze for selection and 
+											instrument playing, allowing folks with limited upper and lower body movement the ability to join in on the fun.
+										</p>
+										<div class="video-container"><iframe src="https://www.youtube.com/embed/w2pEv11Ks2Q"></iframe></div>
+										<br>
+								</div>
+								<br><br>
+								<h1 class="major">College Projects</h1>
 								<br>
 								<div>
 									<h3>VR Anatomy Viewer</h3>								
@@ -225,7 +279,7 @@
 								</div>
 								<br><br>
 								<div>
-									<h2 class="major">Other Projects</h2>
+									<h2 class="major">Misc Projects</h2>
 									<p>
 										Below are a few projects that I've taken part in over the last few years, related to game 
 										development and VR, but not necessarily full-fledged VR Development.
