--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 											exterior & interior spaces, and key training scenarios that crewmembers must learn to conduct a Mars analog simulation in 
 											real life.
 										</p>
-										<div class="video-container"><iframe src="https://www.youtube.com/watch?v=WcvOQmZymHw"></iframe></div>
+										<div class="video-container"><iframe src="https://www.youtube.com/embed/WcvOQmZymHw?si=6stelYXAx2tty9JB"></iframe></div>
 										<br>
 								</div>
 								<br><br>
@@ -220,7 +220,7 @@
 											and companies train safer, smarter drivers. With immersive simulations and real-time feedback, we’re shaping the 
 											future of driving. Watch to see how we’re setting the new standard in driver training.
 										</p>
-										<div class="video-container"><iframe src="https://youtube.com/shorts/4WWtuNQH76A?si=L3W-hFGu1WeA4RTS"></iframe></div>
+										<div class="video-container"><iframe src="https://www.youtube.com/embed/BYiTnDI5_rs?si=o_l7O6hbLtQYvJf_"></iframe></div>
 										<br>
 								</div>
 								<br><br>
@@ -234,7 +234,7 @@
 											beat your friend's time, explore the various Easter Eggs, avoid the hazards, and find SECRET Locations... 
 											the choice of how you play is up to you!
 										</p>
-										<div class="video-container"><iframe src="https://www.youtube.com/watch?v=3XLtSJJKAC0"></iframe></div>
+										<div class="video-container"><iframe src="https://www.youtube.com/embed/3XLtSJJKAC0?si=JD8TUfDUeCjESFVE"></iframe></div>
 										<br>
 								</div>
 								<br><br>
@@ -246,7 +246,7 @@
 											donkable angler fish, and starfish drumkits. We also have a version of this that works with head gaze for selection and 
 											instrument playing, allowing folks with limited upper and lower body movement the ability to join in on the fun.
 										</p>
-										<div class="video-container"><iframe src="https://www.youtube.com/embed/w2pEv11Ks2Q"></iframe></div>
+										<div class="video-container"><iframe src="https://www.youtube.com/embed/GInl5jsAfrc?si=cjWWQcL8Bknd8vDk"></iframe></div>
 										<br>
 								</div>
 								<br><br>
