--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 											donkable angler fish, and starfish drumkits. We also have a version of this that works with head gaze for selection and 
 											instrument playing, allowing folks with limited upper and lower body movement the ability to join in on the fun.
 										</p>
-										<div class="video-container"><iframe src="https://www.youtube.com/embed/GInl5jsAfrc?si=cjWWQcL8Bknd8vDk"></iframe></div>
+										<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/GInl5jsAfrc?si=cjWWQcL8Bknd8vDk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 										<br>
 								</div>
 								<br><br>
